fix(SUT-4): Correct padding on tablet

--- a/styles/menu.css
+++ b/styles/menu.css
@@ -107,6 +107,9 @@
 
 /* Tablet screens: 640px - x */
 @media (min-width: 40rem) {
+  .menu__header {
+    padding-right: var(--desktop-gap3);
+  }
 }
 
 /* Desktop screens: 1248px - x */
